<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".unitOne.UnitOneActivity"
    android:background="@drawable/bg_image2">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/unit1"
        android:id="@+id/unit1_toolbar"
        android:background="#E91E63"
        android:elevation="10dp"
        app:titleTextColor="@android:color/white"/>
    <ScrollView
        android:layout_below="@id/unit1_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/unit1_Btn1"
                android:onClick="callVerticalScrollView"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vertical_scroll_view"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"/>
            <Button
                android:id="@+id/unit1_Btn2"
                android:layout_margin="10dp"
                android:onClick="callHorizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horizontal_scroll_view"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit1_Btn1"/>
            <Button
                android:id="@+id/unit1_Btn3"
                android:layout_margin="10dp"
                android:onClick="callToolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tool_bar"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit1_Btn2"/>
            <Button
                android:id="@+id/unit1_Btn4"
                android:layout_margin="10dp"
                android:onClick="callRatingBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating_bar"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit1_Btn3"/>
            <Button
                android:id="@+id/unit1_Btn5"
                android:layout_margin="10dp"
                android:onClick="callSplashScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/splash_screen"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit1_Btn4"/>
            <Button
                android:id="@+id/unit1_Btn6"
                android:layout_margin="10dp"
                android:onClick="callProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/progress_bar"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit1_Btn5"/>
            <Button
                android:id="@+id/unit1_Btn7"
                android:layout_margin="10dp"
                android:onClick="callCustomToast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_toast"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit1_Btn6"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>