<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".unitTwo.UnitTwoActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/unit2"
        android:id="@+id/unit2_toolbar"
        android:background="#F44336"
        android:elevation="10dp"
        app:titleTextColor="@android:color/white"/>
    <ScrollView
        android:layout_below="@id/unit2_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/unit2_Btn1"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intent"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"/>
            <Button
                android:id="@+id/unit2_Btn2"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pending_intent"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit2_Btn1"/>
            <Button
                android:id="@+id/unit2_Btn3"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/job_scheduler"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit2_Btn2"/>
            <Button
                android:id="@+id/unit2_Btn4"
                android:layout_margin="10dp"
                android:onClick="callAlarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarm_manager"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit2_Btn3"/>
            <Button
                android:id="@+id/unit2_Btn5"
                android:layout_margin="10dp"
                android:onClick="callNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit2_Btn4"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>