<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".unitFive.InternalStorageEx">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/ins_editText_lay"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ins_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/add_text"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ins_editText_lay"
        android:id="@+id/ins_liner_lay"
        android:orientation="horizontal">
        <Button
            android:id="@+id/write_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="writeBtnClick"
            android:background="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:textColor="@color/colorPrimaryDark"
            android:layout_weight="1"
            android:text="@string/write"/>

        <Button
            android:id="@+id/read_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="readBtnClick"
            android:background="@android:color/white"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:textColor="@color/cyan"
            android:layout_weight="1"
            android:text="@string/read"/>
    </LinearLayout>

    <TextView
        android:id="@+id/readText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@id/ins_liner_lay"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>