<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".unitFour.UnitFourActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/unit4"
        android:id="@+id/unit4_toolbar"
        android:background="#3D5AFE"
        android:elevation="10dp"
        app:titleTextColor="@android:color/white"/>
    <ScrollView
        android:layout_below="@id/unit4_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/unit4_Btn1"
                android:layout_margin="10dp"
                android:onClick="callCustomView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_view"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"/>
            <Button
                android:id="@+id/unit4_Btn2"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit4_Btn1"/>
            <Button
                android:id="@+id/unit4_Btn3"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nothing"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                android:background="@drawable/btn"
                android:layout_below="@id/unit4_Btn2"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>